# MyCodecProject

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/azx/jni/: MyFirstJni.java  MySecondJni.java
app/src/main/java/com/azx/myapplication/: MainActivity.java
app/src/main/java/com/azx/myapplication/bean/: CodecBaseEncoderConfigureBean.java  CodecConfigureBean.java  CodecDecoderConfigureBean.java  CodecHardwareEncoderConfigureBean.java  CommonTransBean.java  VideoCapCameraConfigureBean.java  VideoCapConfigureBean.java  VideoRenderConfigureBean.java  VideoRenderViewLifeBean.java
app/src/main/java/com/azx/myapplication/codec/: BaseCodec.java  BaseCodecImpl.java  CodecLife.java  OnCodecLifeListener.java  VideoFrame.java  VideoStatus.java
app/src/main/java/com/azx/myapplication/codec/decoder/: BaseDecoder.java  BaseDecoderImpl.java  HardwareDecoder.java
app/src/main/java/com/azx/myapplication/codec/encoder/: BaseEncoder.java  BaseEncoderImpl.java  HardwareEncoder.java  HardwareEncoderMediaCallBack.java
app/src/main/java/com/azx/myapplication/inter/: OnVideoModuleEventCallBack.java
app/src/main/java/com/azx/myapplication/utils/: MyLog.java
app/src/main/java/com/azx/utils/: MyBitmapUtils.java  MyFileUtils.java  MyLog.java  MyYuvUtils.java
app/src/main/java/com/wushuangtech/api/: ExternalVideoModuleCallback.java  NativeVideoEncodeHelper.java  OnVideoEncodedDataCallBack.java
app/src/main/java/com/wushuangtech/videocore/: OnVideoDecoderListener.java  VideoDecoder.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
